--- a/env/dev_db/connection.properties
+++ b/env/dev_db/connection.properties
@@ -13,6 +13,7 @@ db_all_connection_names = db_product_registry
 
 # connection name: db_product_registry
 db_product_registry_connection_type = POSTGRES
+db_product_registry_dbconn = dev_product_registry_rds
 db_product_registry_database = dev_product_registry_db
 db_product_registry_encoding =
 db_product_registry_host = dev-product-registry-db.cohjvotuynbm.us-west-2.rds.amazonaws.com
